sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: forward reference extends over definition of variable ant
				ant==true;
                                ^