sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var i=0;
	do {
			if(getValeur(i)>getValeur(i+1)){
				echange(i,i+1);
				ant==true;
			}
			i=i+1;
		} while(ant==true)
	var ant:Boolean=false;
}
